# XController

./: .gitignore  CHANGELOG.md  README.md  __init__.py  _adapter_read.py  _adapter_runtime.py  _adapter_write.py  _diagnostics.py  _ui_selectors.py  adapter.py  base.py  human.py  lab.py  lab_api.py  lab_ui.py  pyproject.toml  settings.py  sync.py
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  BRANCHING.md  CI_CD.md  PROPOSED_CLEANUP.md  PUBLIC_CONTRACT.md  README.md
tests/: conftest.py  test_diagnostics.py  test_media_helpers.py  test_module_docstrings.py  test_notifications.py  test_public_helpers.py  test_runtime.py  test_service_contracts.py  test_sync_facade.py
